fixed navbar bug on mobile

--- a/frontend/src/components/journal/Journal.css
+++ b/frontend/src/components/journal/Journal.css
@@ -1,3 +1,4 @@
+
 .journal-graph-card {
     margin-left: 10px;
 }
@@ -43,6 +44,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin: 0px 10px 0px 10px;
 }
 
 .title-journal-card {
